Minor: Capitalized “Slipp” alt text

--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@ skyline.flickerRepeatedly();
 			<nobr class="line">
 				<img id="capn-graphic" src="capn.svg" alt="Cap'n" width="178" height="123.5"/>
 				<div id="slipp-graphic">
-					<img class="border" src="slipp-border.svg" alt="slipp" width="192" height="86"/>
-					<img class="stripe-fill" src="slipp-stripe-fill.svg" alt="slipp" width="192" height="86"/>
+					<img class="border" src="slipp-border.svg" alt="Slipp" width="192" height="86"/>
+					<img class="stripe-fill" src="slipp-stripe-fill.svg" alt="Slipp" width="192" height="86"/>
 				</div>
 				Douglas Thompson
 			</nobr>
